--- a/style.css
+++ b/style.css
@@ -67,3 +67,59 @@ body{
 	height: 180px;
 	z-index: -1;
 }
+.health{
+	margin-top: 230px;
+}
+.health__title{
+	font-size: 40px;
+	color: #261B59;
+	width: 350px;
+	margin-bottom: 30px;
+}
+.health__text{
+	width: 450px;
+	line-height: 1.5;
+}
+.find{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 450px;
+	padding: 50px;
+	margin-top: 100px;
+	box-shadow: 0px 5px 10px 7px rgba(0,0,0,0.1);
+}
+.find-subtext{
+	color: #74708E;
+}
+.find-button{
+	padding: 10px 15px;
+
+	background-color: #261B59;
+	color: white;
+	border: none;
+}
+.pos{
+	position: absolute;
+	right: 25%;
+	top: 5%;
+	width: 250px;
+	height: 330px;
+}
+.pos2{
+	position: absolute;
+	right: 0%;
+	top: -5%;
+	transform: translateX(102px);
+	height: 320px;
+	width: 350px;
+}
+.pos3{
+	position: absolute;
+	right: 0%;
+	top:50%;
+	z-index: -1;
+	transform: translateX(102px);
+	height: 250px;
+	width: 430px;
+}
